<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<group
    android:id="@+id/group1"
    android:checkableBehavior="single">
    <item
        android:id="@+id/subtitulo_uno"
        android:title="Material Design">
        <menu>
            <item
                android:id="@+id/addStudent"
                android:icon="@drawable/ic_baseline_description_24"
                android:title="@string/addStudent"/>
            <item
                android:id="@+id/displayStudents"
                android:icon="@drawable/ic_baseline_description_24"
                android:title="@string/displayStudents" />
            <item
                android:id="@+id/searchStudent"
                android:icon="@drawable/ic_baseline_description_24"
                android:title="@string/searchStudent" />
            <item
                android:id="@+id/deleteStudent"
                android:icon="@drawable/ic_baseline_description_24"
                android:title="@string/deleteStudent" />
        </menu>
    </item>
</group>
</menu>