<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddStudent">

    <EditText
        android:id="@+id/countId"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="28dp"
        android:hint="@string/cuenta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="92dp"
        android:hint="@string/nombre"
        app:layout_constraintEnd_toEndOf="@id/countId"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/countId"
        app:layout_constraintTop_toTopOf="@id/countId" />

    <EditText
        android:id="@+id/age"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="92dp"
        android:hint="@string/edad"
        app:layout_constraintEnd_toEndOf="@id/name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/name"
        app:layout_constraintTop_toTopOf="@id/name" />

    <Button
        android:id="@+id/addBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:onClick="onClick"
        android:text="@string/agregarEstudiante"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age" />
</androidx.constraintlayout.widget.ConstraintLayout>