<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddSubject">

    <Button
        android:id="@+id/addBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="152dp"
        android:onClick="onClick"
        android:text="@string/agregarEstudiante"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/credits" />

    <EditText
        android:id="@+id/subjectName"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="76dp"
        android:hint="@string/nombreMateria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/credits"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="100dp"
        android:hint="@string/creditosMateria"
        app:layout_constraintEnd_toEndOf="@id/subjectName"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/subjectName"
        app:layout_constraintTop_toTopOf="@id/subjectName" />

</androidx.constraintlayout.widget.ConstraintLayout>